# rust-todolist

./: .env.example  .gitignore  Cargo.toml  todo_database.db
migrations/2023-06-29-133331_create_todos/: up.sql
src/: main.rs
src/api/: api.rs
src/models/: mod.rs  schema.rs  todo.rs
src/repository/: database.rs
