[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["v4"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15.0"
